--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, tempore voluptate. Eaque error iure corporis dolore quaerat minus rem aperiam commodi! Autem aliquam quam consectetur sit mollitia repellat veritatis. Eos?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto repellat quaerat mollitia tenetur voluptatem porro sequi ratione temporibus minima ab quo adipisci, ullam maxime neque labore veritatis suscipit eaque modi.</p>
         </article>
     </main>
 </body>
